--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/TehShrike/riot-state-renderer",
   "dependencies": {
-    "extend": "^2.0.0"
+    "riot": "^2.0.11",
+    "xtend": "^4.0.0"
   }
 }
